fixed overlap of game area, added height to most sections of game to fix scrolling issue

--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ body {
     height: 100vh;
     margin: 0;
     padding: 0;
-    background-color: #05263a;
+    /* background-color: #05263a; */
+    background-color: #000000;
     color: rgb(223,9,5);
     font-family: "Special Elite", serif;
 }
@@ -33,6 +34,7 @@ body {
 
 .game-title-flipped {
     font-size: 60px;
+    /* display: inline-block; */
     margin-top: -20px;
     margin-bottom: 0;
     -webkit-transform:rotate(-180deg);
@@ -47,7 +49,7 @@ body {
 }
 
 #main-content {
-    height: 90%;
+    height: 85%;
     background-color: black;
 }
 
@@ -58,6 +60,7 @@ body {
     align-items: center;
     border-top: 1px solid rgb(223,9,5);
     border-bottom: 1px solid rgb(223,9,5);
+    height: 8%;
     /* position: relative; */
 }
 
@@ -72,7 +75,7 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     position: relative; */
-    height: 80%;
+    height: 92%;
 }
 
 #game-bg img {
@@ -90,7 +93,7 @@ body {
     /* height: 70vh; */
     text-align: center;
     /* padding-bottom: 5px; */
-    position: absolute;
+    position: relative;
     top: 50%;
     width: 80%;
     /* display: grid; */
